# arducam-legacy

./: Cargo.toml  README.md  build.rs
src/: import_ov2640_registers.c  lib.rs  ov2640_registers.h  ov2640_registers.rs
